Closed Bug 810876 Opened 13 years ago Closed 13 years ago

Incorrect overflow area size (affecting outline drawing) for broken images

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla19

People

(Reporter: hidenosuke, Assigned: bzbarsky)

References

Details

(Keywords: regression)

Attachments

(2 files)

Attached file Test case
Size of alternative picture is too large. Screenshot for correct size of alternative picture: http://bugzilla.mozilla.gr.jp/attachment.cgi?id=4154 Screenshot for wrong size of alternative picture: http://bugzilla.mozilla.gr.jp/attachment.cgi?id=4155 Regression range is between 2012-9-28 and 2012-9-29.
What are the changeset IDs on the before/after builds for that regression range?
Keywords: regression
(In reply to Boris Zbarsky (:bz) from comment #1) > What are the changeset IDs on the before/after builds for that regression > range? correct size: ftp://ftp.mozilla.org/pub/firefox/nightly/2012/09/2012-09-28-03-05-44-mozilla-central/firefox-18.0a1.en-US.win32.zip wrong size: ftp://ftp.mozilla.org/pub/firefox/nightly/2012/09/2012-09-29-03-06-24-mozilla-central/firefox-18.0a1.en-US.win32.zip This is reported originally to bugzilla-jp. http://bugzilla.mozilla.gr.jp/show_bug.cgi?id=6837
Thanks. Those revisions are 895f66c4eada and c09a0c022b2e, so we get http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=895f66c4eada&tochange=c09a0c022b2e The relevant part here seems to be: Matt Woodrow — Bug 539356 - Part 27 - Make nsImageFrame's overflow include the AltFeedback image if it will use one. r=roc http://hg.mozilla.org/mozilla-central/rev/1c3434a2ef97 The problem is using the 2* on the whole expression including ICON_SIZE, not just on the ICON_PADDING + ALT+BORDER_WIDTH.
Assignee: nobody → bzbarsky
Blocks: dlbi
Summary: Wrong size of alternative picture → Incorrect overflow area size (affecting outline drawing) for broken images
Whiteboard: [need review]
Attachment #681153 - Flags: review?(matt.woodrow) → review+
Flags: in-testsuite?
Whiteboard: [need review]
Target Milestone: --- → mozilla19
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: