Bug 810876. Don't double-count the size of our placeholder when determining the overflow area for an image frame.  r=mattwoodrow